# Delphi

./: .gitignore  README.md  pyproject.toml  requirements-macos_arm64.txt  setup.py
delphi/: __init__.py  delphi.py  example_graph.xml  model.py  model_io.py
oraclehub/: __init__.py  model.py  oraclehub.py
oraclehub/models/: __init__.py
oraclehub/models/NonstructuralModel_720ecfc8/: __init__.py
oraclehub/models/NonstructuralModel_74b9621f/: __init__.py
oraclehub/models/NonstructuralModel_cb6affce/: __init__.py
oraclehub/models/NonstructuralModel_fdf95406/: __init__.py  code.py
oraclehub/models/StructuralModel_1b8dabae/: __init__.py  code.py
oraclehub/models/StructuralModel_53b31da1/: __init__.py
oraclehub/models/StructuralModel_9b4e648e/: __init__.py  code.py
oraclehub/models/StructuralModel_c484db0a/: __init__.py  code.py
