[tool.poetry]
name = "delphi"
version = "0.1.0"
description = "A version control system and standard runtime for Bayesian models in science"
authors = ["Hessam Mehr <Hessam.Mehr@glasgow.ac.uk>"]
license = "Apache License 2"
readme = "README.md"
packages = [ { include = "delphi" } ]

[[tool.poetry.source]]
name = "jax-gpu"
url = "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
default = false
secondary = false

[[tool.poetry.source]]
name = "jax-cpu"
url = "https://storage.googleapis.com/jax-releases/jax_releases.html"
default = false
secondary = false

[tool.poetry.dependencies]
python = "^3.10,<3.12"
numpyro = "^0.11.0"
# To run on GPU
jaxlib = {version="^0.4.7", source="jax-gpu"}
# To run on CPU
# jaxlib = {version="^0.4.8", source="jax-cpu"}
numpy = "^1.24.2"
pydantic = "^1.10.7"
pandas = "^2.0.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.12.0"
jupyterlab = "^3.6.3"
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
