[project]
name = "delphi"
version = "0.2.0"
description = "A version control system and standard runtime for Bayesian models in science"
authors = [{ name = "Hessam Mehr", email = "Hessam.Mehr@glasgow.ac.uk" }]
license = { text = "Apache License 2" }
readme = "README.md"
dependencies = ["numpyro", "numpy", "pydantic", "pandas"]

[project.optional-dependencies]
dev = ["ipykernel", "ruff"]
gpu = ["jax[cuda12_pip]"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
